# flair-fst

./: .gitignore  Cargo.toml  README.md  index-single.html  index.html  package.json  pyproject.toml  rollup.config.js  style.css  tsconfig.json
.github/actions/cache-all-the-things/: action.yml
.github/workflows/: tests.yml
_backend/rustfst_backend/: build_meta.py
js/: api.ts  api.zod.ts  flair-fst.ts  flairfst.ts  jsfoma.spec.ts  jsfoma.ts  jsfoma.zod.ts  lexicon.ts
notebooks/: user_guide.ipynb
src/flair_fst/: __about__.py  __init__.py  cli.py  compile.py  fst.py  lexicon.py  models.py  rules.py  rustfst.py
src/flair_fst/assets/: flair-fst.js  index.html  style.css  template.ods  template.xlsx
src/flair_fst/compile/: __init__.py  approx.py  bibliography.py  csv.py  definition.py  glossary.py  lexicon.py  odf.py  rules.py  xlsx.py
src/flair_fst/definition/: __init__.py  csv.py  odf.py  xlsx.py
src/flair_fst/pyfoma/: LICENSE.md  __init__.py
src/flair_fst/rustfst/: LICENSE.md  __init__.py  ffi_utils.py  iterators.py  string_path.py  string_paths_iterator.py  symbol_table.py  tr.py  trs.py  weight.py
src/flair_fst/rustfst/algorithms/: __init__.py  compose.py  concat.py  connect.py  determinize.py  inversion.py  isomorphic.py  minimize.py  optimize.py  project.py  randgen.py  replace.py  reverse.py  rm_epsilon.py  shortest_path.py  top_sort.py  tr_sort.py  tr_unique.py  union.py
src/flair_fst/rustfst/fst/: __init__.py  const_fst.py  vector_fst.py
tests/: __init__.py  convert_example.py  test_compile.py  test_fst.py  test_rustfst.py
tests/data/: example.ods  example.xlsx
tests/data/example-csv/: bibliography.csv  prefix 1.csv  rules.csv  spelling.csv  stems.csv  suffix 1.csv  symbols.csv  tests.csv  words.csv
tests/data/example.flairfst/: bibliography.json  glossary.json  morphology.json  orthography.json
tests/rustfst/: test_fst.py  test_iterator.py  test_string_paths_iterator.py  test_symt.py  test_tr.py  test_trs.py
tests/rustfst/algorithms/: test_acceptor.py  test_compose.py  test_concat.py  test_connect.py  test_determinize.py  test_inversion.py  test_isomorphic.py  test_minimize.py  test_optimize.py  test_project.py  test_randgen.py  test_replace.py  test_reverse.py  test_rm_epsilon.py  test_shortest_path.py  test_top_sort.py  test_tr_sort.py  test_tr_unique.py  test_transducer.py  test_union.py
