[build-system]
requires = ["setuptools", "setuptools-scm", "setuptools-rust"]
# Set up a custom backend whose only function is to hack ext-modules
# below to install rustfst-ffi.so instead of rustfst_python.so
backend-path = ["_backend"]
build-backend = "rustfst_backend.build_meta"

[project]
name = "flair-fst"
dynamic = ["version"]
description = 'WFST tools for the FLAIR project'
readme = "README.md"
requires-python = ">=3.8"
license = "AGPL-3.0-or-later"
keywords = []
authors = [
  { name = "David Huggins-Daines", email = "dhd@ecolingui.ca" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pyfoma>=1.0.7",
  "odfdo",
]

[project.urls]
Documentation = "https://github.com/IndigiGenius/flair-fst#readme"
Issues = "https://github.com/IndigiGenius/flair-fst/issues"
Source = "https://github.com/IndigiGenius/flair-fst"

[project.scripts]
flair-fst = "flair_fst.cli:main"

[tool.setuptools_scm]
version_file = "src/flair_fst/__about__.py"

[tool.hatch.envs.notebooks]
extra-dependencies = [
  "jupyterlab",
  "graphviz",
]

[tool.hatch.envs.notebooks.scripts]
lab = "jupyter lab"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "pytest",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/flair_fst tests}"

[tool.coverage.run]
source_pkgs = ["flair_fst", "tests"]
branch = true
parallel = true
omit = [
  "src/flair_fst/__about__.py",
]

[tool.coverage.paths]
flair_fst = ["src/flair_fst", "*/flair-fst/src/flair_fst"]
tests = ["tests", "*/flair-fst/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.hatch-static-analysis]
config-path = "none"  # Disable hatch's unreasonable ruff defaults

[[tool.setuptools-rust.ext-modules]]
target = "flair_fst._rustfst_python"
path = "Cargo.toml"
binding = "NoBinding"

